[package]
name = "stumble-term"
version = "0.1.0"
authors = ["supersonictumbleweed <ssdev@supersonic.page>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
femtovg = "0.2.0"
resource = "0.5.0"
instant = "0.1.9"
winit = "0.25.0"
glutin = "0.26.0"
cache-size = "0.5.1"